--- a/src/marketplace.css
+++ b/src/marketplace.css
@@ -382,10 +382,11 @@
 
     @media (--viewportMedium) {
       flex-basis: 480px;
+      flex-grow: 0;
       /* min-height: 568px; */
       padding: var(--modalPaddingMedium);
-      margin-top: 0vh;
-      margin-bottom: 0vh;
+      margin-top: 12.5vh;
+      margin-bottom: 12.5vh;
       border-bottom: 8px solid var(--marketplaceColor);
     }
   }
